[build-system]
requires = ["setuptools>=62.1.0", "torch>=1.13", "torchvision", "torchaudio"]
build-backend = "setuptools.build_meta"

[project]
name = "unitorch"
authors = [
    {name = "fuliucansheng", email = "fuliucansheng@gmail.com"},
]
description = "unitorch provides efficient implementation of popular unified NLU / NLG / CV / CTR / MM / RL models with PyTorch."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["PyTorch"]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
deepspeed = ["deepspeed>=0.11.0"]
diffusers = ["diffusers>=0.29.0", "xformers>=0.0.25", "torchsde>=0.2.6"]
detection = ["mmyolo>=0.6.0"]
quantization = ["bitsandbytes>=0.41.1"]
docs = ["mkdocstrings[python]>=0.18", "mkdocs-material", "markdown-exec", "mkdocs-gen-files", "mkdocs-coverage"]
fastapi = ["fastapi>=0.103.1"]
webui = ["gradio>=4.31.4", "gradio_client>=0.16.4"]
all = ["unitorch[deepspeed,diffusers,detection,quantization,fastapi,webui]"]

[project.scripts]
unitorch-train = "unitorch.cli.consoles.train:cli_main"
unitorch-eval = "unitorch.cli.consoles.eval:cli_main"
unitorch-infer = "unitorch.cli.consoles.infer:cli_main"
unitorch-launch= "unitorch.cli.consoles.launch:cli_main"
unitorch-webui= "unitorch.cli.consoles.webui:cli_main"
unitorch-fastapi= "unitorch.cli.consoles.fastapi:cli_main"
unitorch-service = "unitorch.cli.consoles.service:cli_main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "unitorch.VERSION"}
dependencies = {file = "requirements.txt"}
